IE overflow fix

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+head,body {
+    overflow: hidden;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     font-weight: 900;
